@@ -144,7 +144,7 @@ tests = tst-attr1 tst-attr2 \
 	tst-eintr1 \
 	tst-tsd1 tst-tsd2 \
 	tst-tls1 tst-tls2 \
-	tst-fork1 tst-fork2 tst-fork3 \
+	tst-fork1 tst-fork2 tst-fork3 tst-fork4 \
 	tst-atfork1 \
 	tst-cancel1 tst-cancel2 tst-cancel3 tst-cancel4 tst-cancel5 \
 	tst-cancel6 tst-cancel7 tst-cancel8 tst-cancel9 tst-cancel10 \
